# CtrlCove

./: .gitignore  README.md  index.html  login.py  package-lock.json  package.json  test_login.py  tsconfig.extension.json
browser-extension/: README.md  background.js  content.js  manifest.json  sidepanel.css  sidepanel.html  sidepanel.js
browser-extension/lib/: activity.js  ai-configuration.js  autocomplete.js  browser-context.js  capture-guard.js  endpoint-permissions.js  guide-engine.js  messages.js  redaction.js  session-data.js  visual-capture-budget.js  visual-capture-throttle.js  visual-circuit-breaker.js  visual-request-timeout.js  visual-request.js  visual-response.js
browser-extension/tests/: activity.test.js  ai-configuration.test.js  autocomplete.test.js  browser-context.test.js  capture-guard.test.js  endpoint-permissions.test.js  guide-engine.test.js  manifest.test.js  session-data.test.js  visual-capture-budget.test.js  visual-capture-throttle.test.js  visual-circuit-breaker.test.js  visual-request-timeout.test.js  visual-request.test.js  visual-response.test.js
docs/: ARCHITECTURE.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent.rs  ai.rs  assistant.rs  autonomous.rs  clipboard.rs  database.rs  error.rs  graph.rs  insight_trail.rs  main.rs  operations.rs  pcos.rs  platform.rs  privacy.rs  semantic.rs  terminal_history.rs  validation.rs  workspace.rs
src/components/: AppShell.tsx  ClipboardList.tsx  CognitiveWorkspaceView.tsx  InsightTrailView.tsx  WorkspaceViews.tsx
src/hooks/: useCymosWorkspace.ts
(+2 files in other folders)
